Updated package build workflow. Added AppImage building for linux